# trident-archive

./: .gitignore  README.md  restore.sh
repos/Trident_thunderbolt/: tsconfig.node.json
repos/Trident_thunderbolt/scripts/: bundle-migrations.ts
repos/Trident_thunderbolt/src-tauri/: Info.plist
repos/trident_a5_pentagonal_geospatial_dggs/: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  analyze_imports.py  authalic_constants.py  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
repos/trident_a5_pentagonal_geospatial_dggs/docs/: README.md  (+1 more)
repos/trident_android-ai-guide_phone_dev_workflow/: .gitignore  README.md
repos/trident_atman-persist_ai_consciousness_protocol/: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
repos/trident_atman-persist_ai_consciousness_protocol/examples/: migration_demo.py  quickstart.py
repos/trident_atman-persist_ai_consciousness_protocol/src/atman/: __init__.py  arweave_store.py  integrity.py  migration.py  resurrection.py  shamir_keys.py  soul_decoder.py  soul_encoder.py
repos/trident_autoresearch_karpathy_nanochat_research/: pyproject.toml
repos/trident_breakoutanalysis_stock_breakout_signals/: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SETUP.md  generate_sample_email.py  requirements.txt  sample_email_report.html  trading_guide.md
repos/trident_claude-skill-multimodal_report_generation/: README.md
repos/trident_codegraph_claude_code_knowledge_graph/: CLAUDE.md  README.md  package-lock.json  package.json
repos/trident_crucix_personal_intelligence_monitor/: .env.example  crucix.config.mjs  docker-compose.yml  package-lock.json  package.json  server.mjs
repos/trident_deeptutor_personalized_learning_agent/: .gitignore  SKILL.md  docker-compose.ghcr.yml  docker-compose.yml  requirements.txt
repos/trident_edinet-bench_japanese_finance_llm_eval/: .env.sample  CITATION.cff  README.md  pyproject.toml
repos/trident_edinet-bench_japanese_finance_llm_eval/prompt/: earnings_forecast.yaml  fraud_detection.yaml  industry_prediction.yaml
repos/trident_edinet-bench_japanese_finance_llm_eval/src/edinet_bench/: logistic.py  make_leaderboard.py  model.py  naive_prediction.py  predict.py  utils.py
repos/trident_edinet-bench_japanese_finance_llm_eval/src/edinet_bench/contamination/: analyze_performance_per_year.py  company_name_analyze.py  company_name_predict.py
repos/trident_edinet-bench_japanese_finance_llm_eval/src/edinet_bench/industry_prediction/: analyze_prediction.py  make_leaderboard.py  predict.py
repos/trident_excalidraw_handdrawn_whiteboard/: package.json
repos/trident_foxgpt_openai_reverse_proxy/: .gitignore  README.md  gunicorn.conf.py  loop.sh  mergelines.py  run.sh
repos/trident_github-mcp_official_gh_server/: go.mod  go.sum
repos/trident_goose/: BUILDING_LINUX.md  CUSTOM_DISTROS.md  MAINTAINERS.md  goose-self-test.yaml
repos/trident_goose/crates/goose-sdk/: Cargo.toml
repos/trident_goose/crates/goose-sdk/examples/: acp_client.rs
repos/trident_hermes-agent_nousresearch_growing_ai/: package-lock.json  package.json  pyproject.toml
repos/trident_innate-os_ros2_robot_operating_system/: .clang-format  .gitignore  Dockerfile.build  Dockerfile.test  SYSTEM_SETUP.md  docker-compose.test.yml  pyproject.toml
repos/trident_innate-os_ros2_robot_operating_system/ros2_ws/src/cloud/innate_logger/: package.xml  setup.cfg  setup.py
repos/trident_innate-os_ros2_robot_operating_system/ros2_ws/src/cloud/innate_logger/launch/: logger.launch.py
repos/trident_innate-os_ros2_robot_operating_system/ros2_ws/src/maurice_bot/maurice_nav/: CMakeLists.txt  package.xml  plugins.xml
repos/trident_innate-os_ros2_robot_operating_system/ros2_ws/src/maurice_bot/maurice_nav/config/: controller.yaml  planner.yaml  velocity_smoother.yaml
repos/trident_innate-os_ros2_robot_operating_system/ros2_ws/src/maurice_bot/maurice_nav/include/maurice_nav/: set_head_position_bt_node.hpp  switch_bt_node.hpp
repos/trident_innate-os_ros2_robot_operating_system/ros2_ws/src/maurice_bot/maurice_nav/include/maurice_nav/plugins/: dynamic_goal_checker.hpp
repos/trident_innate-os_ros2_robot_operating_system/ros2_ws/src/maurice_bot/maurice_nav/launch/: mode_manager.launch.py  navigation.launch.py
repos/trident_innate-os_ros2_robot_operating_system/ros2_ws/src/maurice_bot/maurice_nav/maurice_nav/: mode_manager.py  service_utils.py
repos/trident_innate-os_ros2_robot_operating_system/ros2_ws/src/maurice_bot/maurice_nav/src/: goal_approach_scaler.cpp  switch_bt_node.cpp
repos/trident_innate-os_ros2_robot_operating_system/ros2_ws/src/maurice_bot/maurice_nav/src/plugins/: dynamic_goal_checker.cpp
repos/trident_innate-os_ros2_robot_operating_system/ros2_ws/src/maurice_bot/stage_ros2/: package.xml
repos/trident_kagent_cloud_native_agentic_k8s/: DEVELOPMENT.md  Makefile
repos/trident_kilo-marketplace_skills_mcp_catalog/: .gitignore  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md
repos/trident_kilocode_agentic_coding_platform/: package.json
repos/trident_kubectl-ai_gcp_k8s_assistant/: go.mod  go.sum  go.work.sum
repos/trident_lightweight-charts_tradingview_canvas/: package-lock.json  package.json
repos/trident_malware-dev_ethical_hacking_guide/: README.md
repos/trident_openhuman/: pnpm-lock.yaml
repos/trident_orcaclaw_sakana_personal_ai_assistant/: package.json
repos/trident_prediction-market_nautilus_backtester/: .gitignore  AGENTS.md  Makefile  NOTICE  README.md  main.py  mkdocs.yml
repos/trident_quant-dev-repo_nautilus_bt_trading/: .gitignore  .gitmodules
repos/trident_quant-finance_strategies_notebook/: .gitignore  README.md
repos/trident_shinkaevolve_program_evolution/: .gitignore  README.md  pyproject.toml
repos/trident_storybook_ui_component_workshop/: package.json
repos/trident_understand-Anything/: README.md  install.ps1  install.sh  pnpm-lock.yaml
repos/trident_vizceral_netflix_traffic_graph/: package-lock.json  package.json
repos/trident_voicebox_open_voice_synthesis/: .bumpversion.cfg  .gitignore  CHANGELOG.md  Dockerfile  README.md  justfile  package.json
(+1632 files in other folders)
