[project]
name = "edinet-bench"
version = "0.1.0"
description = "Add your description here"
authors = [
]
dependencies = [
    "anthropic>=0.40.0",
    "datasets>=3.5.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.0",
    "tqdm>=4.67.1",
    "python-dotenv>=1.0.1",
    "backoff>=2.2.1",
    "weave>=0.51.27",
    "loguru>=0.7.3",
    "openai>=1.60.0",
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/edinet_bench"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.4",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]
